2023-09-17 Sun  Jari Aalto  <jari.aalto@tuni.fi>

	* tiny/tinycache.el (tinycache-map-over-buffers): Emacs 30.0.50
	correct byte compile errors.

	* tiny/tinybookmark.el (tinybookmark--cache-update): Emacs 30.0.50
	correct byte compile errors.

	* tiny/tinyadvice.el: (docstrings): Emacs 30.0.50 correct
        byte compile errors.

        * tiny/tiny-admin-util.el: Emacs 30.0.50 correct
        byte compile errors. Remove deprecated (require 'autoload).

        * tiny/tinyreplace.el (all): Correct 30.0.50 byte compile errors.
        (tinyreplace-read-compile-buffer-filename):
        Read lines with NULL character (Emacs 29.* M-x grep output)

        * tiny/tinylibmail.el (ti::with-mail-whois): Change
        `symbol-macrolet' to `cl-symbol-macrolet'.

2022-01-02 Sun  Jari Aalto  <jari.aalto@tuni.fi>

        * tiny/tinyliba.el
        (ti::tmp-cl-library-check): disable. Obsoleted.

        * tiny/tinylib.el (ti::buffer-read-nth-word): byte compile fix:
        unused functions. Use goto-char to select beginning position
        according to MODE.

2020-11-28 Sat  Jari Aalto  <jari.aalto@tuni.fi>

        * tiny/*: Replace `pushnew' with `cl-pushnew'.

        * tiny/tinyreplace.el (tinyreplace-install-default-keybings):
          Accept KEY parameter. In new Emacs M-& is `async-shell-command'
          (tinyreplace--default-key): New.
          (tinyreplace-install): Do not call
          `tinyreplace-install-default-keybings'
          (tinyreplace-define-keys-local-map): Use `tinyreplace--default-key'
          (tinyreplace-install-default-keybings): Rewrite.

2019-05-25 Sat  Jari Aalto  <jari.aalto@cante.net>

        * tiny/tinyigrep.el (tinyigrep-install-default-databases):
        Use `cl-union'.

        * tiny/tinyeat.el (eval-when-compile): require cl.

        * tiny/tinyhotlist.el (eval-when-compile): require cl.

        * tiny/tinymailbox.el: (eval-when-compile): require cl.

        * tiny/tinytab.el: (eval-when-compile): require cl.
